Updated to Perch 2.2.8

--- a/system/core/lang/en-gb.txt
+++ b/system/core/lang/en-gb.txt
@@ -56,7 +56,7 @@
 	"Path":"Path",
 	"Edit Page Template":"Edit Page Template",
 	"The title you give to this page will display when the user is selecting a master page.":"The title you give to this page will display when the user is selecting a master page.",
-	"You can select a page to copy regions from. This means that when a user creates a new page the regions will not show up as NEW but instead will take on the types set for the age you are copying. No content is copied.":"You can select a page to copy regions from. This means that when a user creates a new page the regions will not show up as NEW but instead will take on the types set for the age you are copying. No content is copied.",
+	"You can select a page to copy regions from. This means that when a user creates a new page the regions will not show up as NEW but instead will take on the types set for the page you are copying. No content is copied.":"You can select a page to copy regions from. This means that when a user creates a new page the regions will not show up as NEW but instead will take on the types set for the page you are copying. No content is copied.",
 	"If you reference this master page then changes made to the template will reflect on all pages that use the master page. This is usually what you want. If new pages copy this master page then if you make a change to your site design you will need to update all of the created pages individually.":"If you reference this master page then changes made to the template will reflect on all pages that use the master page. This is usually what you want. If new pages copy this master page then if you make a change to your site design you will need to update all of the created pages individually.",
 	"Editing %s Master Page":"Editing %s Master Page",
 	"Details":"Details",
@@ -107,7 +107,7 @@
 	"If the Dashboard is disabled then editors will be taken directly to the page listing on login.":"If the Dashboard is disabled then editors will be taken directly to the page listing on login.",
 	"Hiding Perch branding":"Hiding Perch branding",
 	"Hiding Perch branding will remove all visible mention of Perch from the admin - including the favicon, Perch logos and link to edgeofmyseat.com":"Hiding Perch branding will remove all visible mention of Perch from the admin - including the favicon, Perch logos and link to edgeofmyseat.com",
-	"These settings give you control over the editing environment. By default, regions will be displayed in a single page editing mode, this can then be changed in the region setting per region if list\/detail is more effective for that region. You can also choose whether the content list should be collapsed or not.":"These settings give you control over the editing environment. By default, regions will be displed in a single page editing mode, this can then be changed in the region setting per region if list\/detail is more effective for that region. You can also choose whether the content list should be collapsed or not.",
+	"These settings give you control over the editing environment. By default, regions will be displayed in a single page editing mode, this can then be changed in the region setting per region if list\/detail is more effective for that region. You can also choose whether the content list should be collapsed or not.":"These settings give you control over the editing environment. By default, regions will be displayed in a single page editing mode, this can then be changed in the region setting per region if list\/detail is more effective for that region. You can also choose whether the content list should be collapsed or not.",
 	"General":"General",
 	"Diagnostics":"Diagnostics",
 	"Editing General Settings":"Editing General Settings",
@@ -411,9 +411,32 @@
 	"Upvote points":"Upvote points",
 	"Downvote points":"Downvote points",
 	"Join title fields with":"Join title fields with",
+	"Restrict access to members tagged":"Restrict access to members tagged",
 	"Restrict access to members with tags":"Restrict access to members with tags",
 	"Members":"Members",
 	"By Tag":"By Tag",
 	"Login page URL":"Login page URL",
-	"Login page path":"Login page path"
+	"Login page path":"Login page path",
+	"You are viewing members with tag \u2018%s\u2019":"You are viewing members with tag \u2018%s\u2019",
+	"You may update the user\u2019s personal details, email address and password here. If you do not wish to send a new password by email, just uncheck the box.":"You may update the user\u2019s personal details, email address and password here. If you do not wish to send a new password by email, just uncheck the box.",
+	"You may update the user\u2019s personal details, email address and password here. If you wish to send a new password by email, just check the box.":"You may update the user\u2019s personal details, email address and password here. If you wish to send a new password by email, just check the box.",
+	"Enter field IDs to list when editing in list and detail mode. Comma separated.":"Enter field IDs to list when editing in list and detail mode. Comma separated.",
+	"Item list column IDs":"Item list column IDs",
+	"Choose from: ":"Choose from: ",
+	"Republish Pages":"Republish Pages",
+	"Republish":"Republish",
+	"Republishing Pages":"Republishing Pages",
+	"Delete the page from here. Note that unless the tag is also removed from your page, the option to edit this page will reappear.":"Delete the page from here. Note that unless the tag is also removed from your page, the option to edit this page will reappear.",
+	"Deleting the %s Page":"Deleting the %s Page",
+	"Are you sure you wish to republish all pages?":"Are you sure you wish to republish all pages?",
+	"Pages successfully republished.":"Pages successfully republished.",
+	"Republishing is underway.":"Republishing is underway.",
+	"Republishing: %s on page %s":"Republishing: %s on page %s",
+	"Republishing a lot of content can be slow and consume server resources.":"Republishing a lot of content can be slow and consume server resources.",
+	"Republishing rebuilds the cached copy of each page. It is useful if you have changed a template and need to refresh existing content to pick up the change.":"Republishing rebuilds the cached copy of each page. It is useful if you have changed a template and need to refresh existing content to pick up the change.",
+	"Republishing completed successfully":"Republishing completed successfully",
+	"Sorry, that page could not be created.":"Sorry, that page could not be created.",
+	"Store images":"Store images",
+	"Default resource bucket":"Default resource bucket",
+	"Subpage folder does not exist":"Subpage folder does not exist"
 }
